--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ variables:
     - pwd
     - env |grep CI_
     - env|egrep BLAS
-    - env|egrep -i mkl || trye
+    - env|egrep -i mkl || true
     - cd $CI_PROJECT_DIR/src
     - make nwchem_config
     - make 64_to_32
