--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,8 +13,10 @@ variables:
 
 .compile_template: &compile_step
   script:
+    - if [ "$(lsb_release -r|cut -c10-11)" == "16" ]; then SCALAPACK_LIB="-lscalapack-openmpi -lblacsCinit-openmpi -lblacs-openmpi  -lopenblas"; fi
     - env |grep CI_
     - env|egrep BLAS
+    - env|egrep SCALAP || true
     - env|egrep -i mkl || true
     - cd $CI_PROJECT_DIR/src
     - make nwchem_config
@@ -62,7 +64,7 @@ linux64:build_intel:
     LAPACK_LIB: " -lmkl_intel_ilp64 -lmkl_sequential -lmkl_core -lpthread -lm -ldl"
     SCALAPACK_LIB: " -lmkl_scalapack_ilp64 -lmkl_intel_ilp64 -lmkl_sequential -lmkl_core -lmkl_blacs_intelmpi_ilp64 -lpthread -lm -ldl"
     ARMCI_NETWORK: "MPI-PR"
-    USE_FPIC: "Y"
+    USE_FPICF: "Y"
   tags:
     - ubuntu_bionic
 
