--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,9 +44,8 @@ variables:
 
 .rhel6_template: &rhel6_sourcing
   before_script:
-    LD_LIBRARY_PATH: "/usr/lib64/mpich/lib"
-    
-    
+    - LD_LIBRARY_PATH="/usr/lib64/mpich/lib"
+
 linux64:build_gcc:
   stage: build
   <<: *compile_step
@@ -78,14 +77,14 @@ linux64:build_intel:
 
 linux64_rhel6:build_gcc:
   stage: build
-  <<: *intel_sourcing
+  <<: *rhel6_sourcing
   <<: *compile_step
   variables:
     BLAS_SIZE: 4
     SCALAPACK_SIZE: 4
     BLAS_LIB: "   -lopenblas"
     LAPACK_LIB: " -lopenblas"
-    SCALAPACK_LIB: "-L/usr/lib64/mpich/lib -lscalapack
+    SCALAPACK_LIB: "-L/usr/lib64/mpich/lib -lscalapack"
     PATH: "/usr/lib64/mpich/bin/:/usr/bin:/bin:."
     ARMCI_NETWORK: "MPI-PT"
   tags:
