--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ variables:
   OMP_NUM_THREADS: 1
   USE_64TO32: Y
   NWCHEM_LONG_PATHS: Y
+  GIT_CLEAN_FLAGS: -ffdx -e bin
   GIT_DEPTH: 32
 
 .linuxrhel6_template: &beforescript_linuxrhel6
@@ -16,6 +17,7 @@ variables:
     - module purge
     - export LD_LIBRARY_PATH=/usr/lib/mpich/lib
     - export PATH=/usr/lib/mpich/bin:/bin:/usr/bin:.
+    - export NWCHEM_TARGET=LINUX
 
 .compile_template: &compile_step
   script:
@@ -43,7 +45,6 @@ variables:
     GIT_CLEAN_FLAGS: -ffdx -e bin -e build -e install
   script:
     - if [ "$FC" == "ifort" ]; then source /opt/intel/compilers_and_libraries_2018/linux/bin/compilervars.sh  intel64; fi
-    - if [ "$NWCHEM_TARGET" == "LINUX" ]; then export LD_LIBRARY_PATH="/usr/lib/mpich/lib" ; fi
     - env|egrep -i mkl || true
     - env|egrep  LD_LIBR || true
     - cd $CI_PROJECT_DIR/QA
@@ -62,7 +63,7 @@ variables:
 
 .rhel6_template: &rhel6_sourcing
   before_script:
-    - LD_LIBRARY_PATH="/usr/lib64/mpich/lib"
+    - export LD_LIBRARY_PATH=/usr/lib64/mpich/lib
 
 linux64:build_gcc:
   stage: build
