--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -107,7 +107,7 @@ linux_rhel6:build_gcc:
     PATH: "/usr/lib/mpich/bin/:/usr/bin:/bin:."
     LD_LIBRARY_PATH: "/usr/lib/mpich/lib"
     NWCHEM_TARGET: "LINUX"
-    ARMCI_NETWORK: "MPI-PT"
+    ARMCI_NETWORK: "MPI-MT"
   tags:
     - rhel_6
 
@@ -130,7 +130,7 @@ linux64_rhel6:build_gcc:
     LAPACK_LIB: " -lopenblas"
     SCALAPACK_LIB: "-L/usr/lib64/mpich/lib -lscalapack"
     PATH: "/usr/lib64/mpich/bin/:/usr/bin:/bin:."
-    ARMCI_NETWORK: "MPI-PT"
+    ARMCI_NETWORK: "MPI-MT"
   tags:
     - rhel_6
 
