--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ env:
   - NWCHEM_MODULES="tinyqmpw python" ARMCI_NETWORK=MPI-PT MPI_IMPL="mpich"
   - NWCHEM_MODULES=tinyqmpw ARMCI_NETWORK=MPI-PT MPI_IMPL="mpich" USE_SIMINT=1 SIMINT_MAXAM=3
   - NWCHEM_MODULES=tinyqmpw ARMCI_NETWORK=MPI-MT MPI_IMPL="mpich"
+  - NWCHEM_MODULES=tinyqmpw ARMCI_NETWORK=MPI-MT MPI_IMPL="mpich" USE_OPENMP=1
   - NWCHEM_MODULES=tinyqmpw ARMCI_NETWORK=MPI3   MPI_IMPL="mpich"
   - NWCHEM_MODULES=tce     ARMCI_NETWORK=MPI-TS MPI_IMPL="openmpi"
   - NWCHEM_MODULES=tce     ARMCI_NETWORK=MPI3   MPI_IMPL="mpich"
