--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ variables:
   before_script:
     - export NWCHEM_TARGET=LINUX
     - export PATH=/home/edo/apps/mpich314_i686/bin:/usr/bin:/bin:.
-    - export LD_LIBRARY_PATH=/home/edo/apps/mpich314_i686/lib
+    - export LD_LIBRARY_PATH=/home/edo/apps/mpich314_i686/lib:/home/edo/apps/OpenBLAS.i386/lib
 
 .compile_template: &compile_step
   script:
@@ -115,8 +115,10 @@ linux_ubuntu:build_gcc:
 #    PATH: "/usr/lib/mpich/bin/:/usr/bin:/bin:."
 #    LD_LIBRARY_PATH: "/usr/lib/mpich/lib"
     PATH: "/home/edo/apps/mpich314_i686/bin:/usr/bin:/bin:."
-    LD_LIBRARY_PATH: "/home/edo/apps/mpich314_i686/lib"
-    USE_INTERNALBLAS: "y"
+#    USE_INTERNALBLAS: "y"
+    LD_LIBRARY_PATH: "/home/edo/apps/mpich314_i686/lib:/home/edo/apps/OpenBLAS.i386/lib"
+    BLAS_LIB: "-L/home/edo/apps/OpenBLAS.i386/lib -lopenblas"
+    LAPACK_LIB: "-L/home/edo/apps/OpenBLAS.i386/lib -lopenblas"
     SCALAPACK: " "
     ARMCI_NETWORK: "MPI-MT"
   tags:
