mpipr for linux32

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,7 +120,7 @@ linux_ubuntu:build_gcc:
     BLAS_LIB: "-L/home/edo/apps/OpenBLAS.i386/lib -lopenblas"
     LAPACK_LIB: "-L/home/edo/apps/OpenBLAS.i386/lib -lopenblas"
     SCALAPACK: " "
-    ARMCI_NETWORK: "MPI-MT"
+    ARMCI_NETWORK: "MPI-PR"
   tags:
     - ubuntu_xenial
 
