--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ env:
   - NWCHEM_MODULES=tinyqmpw ARMCI_NETWORK=MPI-MT MPI_IMPL="mpich" USE_OPENMP=1
   - NWCHEM_MODULES=tinyqmpw ARMCI_NETWORK=MPI3   MPI_IMPL="mpich"
   - NWCHEM_MODULES=tce     ARMCI_NETWORK=MPI-TS MPI_IMPL="openmpi"
-  - NWCHEM_MODULES=tce     ARMCI_NETWORK=MPI-PT MPI_IMPL="mpich"
+  - NWCHEM_MODULES=tce     ARMCI_NETWORK=MPI-PR MPI_IMPL="mpich"
 compiler:
   - gcc
 matrix:
